# code-atlas

./: .gitignore  LICENSE  README.md  demo-mcp.md  main.py  parser.py  pyproject.toml  sample.py
.github/workflows/: publish.yaml
code_atlas/: __init__.py  cache.py  cli.py  cli_commands.py  cli_extra_commands.py  cli_help.py  cli_render.py  exporters.py  graph.py  indexer.py  query.py  repo_source.py  scanner.py
code_atlas/agents/: __init__.py
code_atlas/agents/mcp/: handlers.py  schemas.py  server.py  utils.py
code_atlas/analysis/: common.py  go_extractor.py  python_builder.py  python_extractor.py  regex_lang.py  tree_sitter_support.py  typescript_extractor.py
code_atlas/cli/: ai_settings.py  app.py  ask_commands.py  commands.py  extra_commands.py  help.py  render.py  tui.py  ui.py
code_atlas/core/: cache.py  graph.py  indexing.py  source.py
code_atlas/discovery/: basic.py  traversal.py  visual.py
code_atlas/exporters/: __init__.py  graph_exports.py  visual_html.py
code_atlas/extractors/: __init__.py  base.py  common.py  go_extractor.py  java_extractor.py  python_builder.py  python_extractor.py  python_utils.py  regex_lang.py  stub_extractor.py  tree_sitter_support.py  typescript_extractor.py
code_atlas/infra/: __init__.py  config.py  logging.py
code_atlas/llm/: __init__.py  client.py  context.py  keychain.py
code_atlas/mcp/: handlers.py  server.py
code_atlas/query/: __init__.py  basic.py  traversal.py
docs/: agent-lifecycle.md  architecture.md  benchmarks.md  demo-capture.md  mcp-configs.md
docs/assets/: README.md
docs/assets/demo-run/: cli-find.json  cli-impact.json  cli-stats.json  mcp-find-symbol.json  mcp-impact-symbol.json  transcript.txt  visual-workflow.html
saurix/: __init__.py
saurix/agents/: __init__.py
saurix/agents/mcp/: __init__.py  handlers.py  server.py  utils.py
saurix/analysis/: __init__.py  base.py  java_extractor.py  python_extractor.py  stub_extractor.py
saurix/cli/: app.py  commands.py  extra_commands.py  help.py  render.py
saurix/core/: __init__.py  cache.py  graph.py  indexing.py  models.py  source.py
saurix/discovery/: __init__.py  traversal.py  visual.py
saurix/exporters/: __init__.py  graph_exports.py
saurix/infra/: config.py
scripts/: benchmark_incremental.py  benchmark_suite.py  demo_runs.py
tests/: __init__.py  conftest.py  test_extractors.py  test_graph.py  test_query.py
