[project]
name = "code-atlas"
version = "0.1.0"
description = "Interactive CLI that indexes polyglot repositories into a queryable knowledge graph for AI agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "google-genai>=1.31.0",
    "keyring>=25.6.0",
    "mcp>=1.1.3",
    "openai>=1.57.2",
    "rich>=13.9.4",
    "textual>=0.79.1",
    "tree-sitter>=0.21,<0.22",
    "tree-sitter-languages>=1.10.2",
]

[project.scripts]
code-atlas = "code_atlas.cli:run"
code-atlas-mcp = "code_atlas.mcp:run"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true
