[project]
name = "saurix"
version = "0.1.0"
description = "Interactive CLI that indexes polyglot repositories into a queryable knowledge graph for AI agents"
readme = "README.md"
authors = [
    { name = "Anis B", email = "anisbaziz.sub@gmail.com" }
]
keywords = ["mcp", "knowledge-graph", "static-analysis", "ai-agents", "architecture"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.1.3",
    "rich>=13.9.4",
    "tree-sitter>=0.21,<0.22",
    "tree-sitter-languages>=1.10.2",
]

[project.urls]
Homepage = "https://github.com/anismabaziz/saurix"
Repository = "https://github.com/anismabaziz/saurix"
Issues = "https://github.com/anismabaziz/saurix/issues"

[project.scripts]
saurix = "saurix.cli:run"
saurix-mcp = "saurix.agents.mcp:run"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "build>=1.5.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "twine>=6.2.0",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tmp", "docs", "scripts", ".venv", ".git"]
